CH-8103-Ui-fixes-z-index-issue-shedule-list-block

--- a/src/app/screens/Schedule/Components/styles.css
+++ b/src/app/screens/Schedule/Components/styles.css
@@ -1418,7 +1418,7 @@ span.ProfileIconSearch .search-block_SP {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  z-index:9999;
+  z-index:1000;
 }
 
 .customechk input {
